--- a/about.html
+++ b/about.html
@@ -15,10 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Special+Elite&family=Zilla+Slab+Highlight:wght@400;700&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+    <!-- Custom stylesheet -->
     <link rel="stylesheet" href="/css/custom.css">
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-dark sticky-top navbar-expand-lg">
         <div class="container-fluid navbar-container">
             <!-- Logo -->
@@ -49,12 +52,16 @@
         </div>
     </nav>
 
+
+    <!-- HERO -->
     <header class="container-fluid g-0">
         <div class="container-fluid align-items-center text-center site-header subpage-header">
             <h1 class="subpage-title">Om Kaffeparty</h1>
         </div>
     </header>
 
+
+    <!-- MAIN -->
     <main class="main px-3 px-md-4">
 
         <div class="row mb-5">
@@ -67,6 +74,7 @@
         </div>
 
         <div class="row mb-4 g-4">
+            <!-- CARD 1 -->
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="card shadow">
                     <figure class="card-image">
@@ -79,8 +87,9 @@
                         <a href="#" class="btn btn-primary">Kontakta Anna</a>
                     </div>
                 </div>
-            </div>
+            </div><!-- END Card 1 -->
 
+            <!-- CARD 2 -->
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="card shadow">
                     <figure class="card-image">
@@ -93,11 +102,14 @@
                       <a href="#" class="btn btn-primary">Kontakta Jonas</a>
                     </div>
                   </div>
-            </div>
-        </div>
+            </div><!-- END Card 2 -->
+
+        </div><!-- END Row -->
 
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="site-footer">
         <figure>
             <img src="/img/logo.svg" class="footer-logo" alt="Kaffeparty Logo">
