--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Special+Elite&family=Zilla+Slab+Highlight:wght@400;700&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+
+    <!-- Custom stylesheet -->
     <link rel="stylesheet" href="/css/custom.css">
 </head>
+
 <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-dark sticky-top navbar-expand-lg">
         <div class="container-fluid navbar-container">
             <!-- Logo -->
@@ -48,14 +53,18 @@
         </div>
     </nav>
 
+
+    <!-- HERO -->
     <header class="container-fluid g-0">
         <div class="align-items-center text-center site-header">
             <img src="/img/logo.svg" class="header-logo" alt="Kaffeparty Logo">
-            <p class="site-title">Kaffeparty</p>
+            <h1 class="site-title">Kaffeparty</h1>
             <p class="site-subtitle">Kaffeupplevelser utöver det vanliga</p>
         </div>
     </header>      
     
+
+    <!-- MAIN -->
     <main class="main">
         <div class="about-container container-fluid px-3 px-md-4">
 
@@ -114,6 +123,8 @@
 
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="site-footer">
         <figure>
             <img src="/img/logo.svg" class="footer-logo" alt="Kaffeparty Logo">
