--- a/products.html
+++ b/products.html
@@ -15,10 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Special+Elite&family=Zilla+Slab+Highlight:wght@400;700&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+    <!-- Custom stylesheet -->
     <link rel="stylesheet" href="/css/custom.css">
 </head>
 
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-dark sticky-top navbar-expand-lg">
         <div class="container-fluid navbar-container">
             <!-- Logo -->
@@ -49,16 +51,22 @@
         </div>
     </nav>
 
+
+    <!-- HERO -->
     <header class="container-fluid g-0">
         <div class="container-fluid align-items-center text-center site-header subpage-header">
             <h1 class="subpage-title">Våra produkter</h1>
         </div>
     </header>
 
+
+    <!-- MAIN -->
     <main class="main">
+
+        <!-- KAFFEPARTYN -->
         <h2 class="text-center mb-4 display-3">Kaffepartyn</h2>
 
-        <div class="container-fluid px-3 px-md-4">
+        <div class="container-fluid px-3 px-md-4 margin-bottom">
             <!-- SEKTION 1: Företag -->
             <div class="row align-items-stretch mb-4 g-0 shadow product-container">
                 <div class="col-md-5">
@@ -90,9 +98,10 @@
                     </div>
                 </div>
             </div><!-- END Sektion 3 -->
-        </div>
+        </div><!-- END Container-->
 
 
+        <!-- KAFFEMASKINER -->
         <h2 class="text-center mb-4 display-3">Kaffemaskiner</h2>
 
         <div class="container-fluid px-3 px-md-4">
@@ -179,6 +188,8 @@
 
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="site-footer">
         <figure>
             <img src="/img/logo.svg" class="footer-logo" alt="Kaffeparty Logo">
